Update DESCRIPTION para incluir sf e adicionando badges no README.

--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 # DESIGUALDADE RACIAL NO BRASIL
 
 <!-- badges: start -->
+![R-CMD-check](https://github.com/albersonmiranda/desigualdade/workflows/R-CMD-check/badge.svg?branch=master&event=push) ![lint](https://github.com/albersonmiranda/desigualdade/workflows/lint/badge.svg?branch=master&event=push)
 <!-- badges: end -->
 
 O objetivo desse pacote é facilitar a plotagem de gráficos que evidenciam a desigualdade racial nos municípios brasileiros.
@@ -34,7 +35,7 @@ devtools::install_github("albersonmiranda/desigualdade")
 ```
 ## Exemplo
 
-Esse é um exemplo básico em que mostra como plotar o gráfico da desigualdade de renda entre brancos e pretos nos municípios de São Paulo, exibindo os 3 municípios de maior renda e os 3 de menor:
+Esse é um exemplo básico em que mostra como plotar o gráfico da desigualdade de renda entre brancos e pretos nos municípios do Rio de Janeiro, exibindo os 3 municípios de maior renda e os 3 de menor:
 
 ```{r example}
 library(desigualdade)
