--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 ![R-CMD-check](https://github.com/albersonmiranda/desigualdade/workflows/R-CMD-check/badge.svg?branch=master&event=push) ![lint](https://github.com/albersonmiranda/desigualdade/workflows/lint/badge.svg?branch=master&event=push)
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
 
 O objetivo desse pacote é facilitar a plotagem de gráficos que evidenciam a desigualdade racial nos municípios brasileiros.
@@ -35,9 +36,12 @@ devtools::install_github("albersonmiranda/desigualdade")
 ```
 ## Exemplo
 
-Esse é um exemplo básico em que mostra como plotar o gráfico da desigualdade de renda entre brancos e pretos nos municípios do Rio de Janeiro, exibindo os 3 municípios de maior renda e os 3 de menor:
+Esse é um exemplo básico em que mostra como plotar o gráfico da desigualdade de renda entre brancos, pretos e amarelos nos municípios do Rio de Janeiro, exibindo os 3 municípios de maior renda e os 3 de menor:
 
 ```{r example}
 library(desigualdade)
-RM("RJ", n.nomes = 3)
+r_m("RJ", etnia = c("PRETO", "BRANCO", "AMARELO"), n_nomes = 3, p_nomes = 1000,
+    autor = "@albersonmiranda",
+    titulo = "DESIGUALDADE RACIAL",
+    subtitulo = "RENDA PRETA VERSUS BRANCA E AMARELA")
 ```
