--- a/README.Rmd
+++ b/README.Rmd
@@ -40,8 +40,22 @@ Esse é um exemplo básico em que mostra como plotar o gráfico da desigualdade 
 
 ```{r example}
 library(desigualdade)
+
 r_m("RJ", etnia = c("PRETO", "BRANCO", "AMARELO"), n_nomes = 3, p_nomes = 1000,
     autor = "@albersonmiranda",
     titulo = "DESIGUALDADE RACIAL",
     subtitulo = "RENDA PRETA VERSUS BRANCA E AMARELA")
+```
+
+Também é possível utilizar o `patchwork` para controlar o layout do plot final:
+
+```{r example2}
+library(patchwork)
+
+r_m("ES", etnia = c("PRETO", "BRANCO", "INDIGENA"),
+    n_nomes = 3, p_nomes = 1000,
+    autor = "@albersonmiranda",
+    titulo = "DESIGUALDADE RACIAL",
+    subtitulo = "ESPÍRITO SANTO") +
+  plot_layout(ncol = 3, widths = c(2,1,1))
 ```
