--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ Esse é um exemplo básico em que mostra como plotar o gráfico da desigualdade 
 ```{r example}
 library(desigualdade)
 
-r_m("SP", etnia = c("PRETO", "AMARELO"), n_nomes = 3, p_nomes = 1000,
+r_m("SP", etnia = c("PRETO", "AMARELO"), n_nomes = 3, p_nomes = 1000, to = 2000,
     caption = "dados: Censo/IBGE | elaboração: @albersonmiranda",
     title = "DESIGUALDADE RACIAL",
     subtitle = "RENDA PRETA VERSUS AMARELA EM SP")
@@ -53,7 +53,7 @@ Também pode-se utilizar o `patchwork` para controlar o layout do plot final:
 library(patchwork)
 
 r_m("RJ", etnia = c("PRETO", "BRANCO", "INDIGENA"),
-    n_nomes = 2, p_nomes = 1000,
+    n_nomes = 2, p_nomes = 1000, from = 200, to = 1000, by = 200,
     caption = "dados: Censo/IBGE | elaboração: @albersonmiranda",
     title = "DESIGUALDADE RACIAL",
     subtitle = "RENDA BRANCA VERSUS PRETA E INDIGENA NO RIO DE JANEIRO") +
