--- a/README.Rmd
+++ b/README.Rmd
@@ -34,15 +34,15 @@ Você pode instalar a versão de desenvolvimento do pacote pelo [GitHub](https:/
 # install.packages("devtools")
 devtools::install_github("albersonmiranda/desigualdade")
 ```
-## Exemplo
+## Exemplos
 
 Esse é um exemplo básico em que mostra como plotar o gráfico da desigualdade de renda entre pretos e amarelos nos municípios de São Paulo, exibindo os 3 municípios de maior renda e os 3 de menor:
 
 ```{r example}
 library(desigualdade)
 
-r_m("SP", etnia = c("PRETO", "AMARELO"), n_nomes = 3, p_nomes = 1000, to = 2000,
-    caption = "dados: Censo/IBGE | elaboração: @albersonmiranda",
+des_plot("SP", etnia = c("PRETO", "AMARELO"), n_nomes = 3,
+    caption = "dados: censo/2010 | elaboração: @albersonmiranda",
     title = "DESIGUALDADE RACIAL",
     subtitle = "RENDA PRETA VERSUS AMARELA EM SP")
 ```
@@ -52,15 +52,15 @@ Também pode-se utilizar o `patchwork` para controlar o layout do plot final:
 ```{r example2}
 library(patchwork)
 
-r_m("RJ", etnia = c("PRETO", "BRANCO", "INDIGENA"),
-    n_nomes = 2, p_nomes = 1000, from = 200, to = 1000, by = 200,
-    caption = "dados: Censo/IBGE | elaboração: @albersonmiranda",
+des_plot("RO", etnia = c("PRETO", "PARDO", "BRANCO", "INDIGENA"),
+    tipo = "pobreza", n_nomes = 1,
+    caption = "dados: censo/2010 | elaboração: @albersonmiranda",
     title = "DESIGUALDADE RACIAL",
-    subtitle = "RENDA BRANCA VERSUS PRETA E INDIGENA NO RIO DE JANEIRO") +
-  plot_layout(ncol = 3, widths = c(2,1,1))
+    subtitle = "% DE POBRES EM RONDÔNIA") +
+  plot_layout(ncol = 2)
 ```
 
-É possível ir mais além e combinar vários `r_m()` com diferentes argumentos:
+É possível ir além e combinar vários `des_plot()` com diferentes argumentos:
 
 ```{r example3}
 
@@ -70,16 +70,16 @@ design = "
 AABBCC
 AABBDD
 "
-r_m("ES", etnia = c("PRETO", "BRANCO"), ref = "2010", n_nomes = 2,
-    caption = "dados: Censo/IBGE | elaboração: @albersonmiranda",
+des_plot("ES", etnia = c("PRETO", "BRANCO"), ref = "2010",
+    caption = "dados: censo/IBGE | elaboração: @albersonmiranda",
     title =  "DESIGUALDADE RACIAL NO ESPIRITO SANTO",
     subtitle = "EVOLUÇÃO DAS RENDAS PRETA E BRANCA") *
   ggtitle("2010") +
   
-  r_m("ES", etnia = c("PRETO", "BRANCO"), ref = "1991", n_nomes = 1,
+  des_plot("ES", etnia = c("PRETO", "BRANCO"), ref = "1991", n_nomes = 1,
       bar = FALSE) * ggtitle("1991") +
   
-  r_m("ES", etnia = c("PRETO", "BRANCO"), ref = "2000", n_nomes = 1,
+  des_plot("ES", etnia = c("PRETO", "BRANCO"), ref = "2000", n_nomes = 1,
       bar = FALSE) * ggtitle("2000") +
   
   plot_layout(design = design)
